# camera-roll-sounds-workspace

./: .gitignore  .ignore  README.md  multi.json  pyrightconfig.json
.cursor/rules/: repo-directories.mdc
.github/workflows/: deploy.yml  main.yml
.openbase/: openbase.json
camera-roll-sounds-api/: .boilersync  README.md  pyproject.toml
camera-roll-sounds-api/camera_roll_sounds_api/: package_apps.py
camera-roll-sounds-api/camera_roll_sounds_api/camera_roll_sounds/: .boilersync  apps.py  models.py  urls.py  views.py
camera-roll-sounds-api/camera_roll_sounds_api/camera_roll_sounds/management/commands/: test_generate.py
camera-roll-sounds-api/camera_roll_sounds_api/camera_roll_sounds/migrations/: 0001_initial.py
camera-roll-sounds-api/camera_roll_sounds_api/camera_roll_sounds/services/: audio_generator.py  image_processor.py
camera-roll-sounds-api/camera_roll_sounds_api/camera_roll_sounds/tasks/: generate_audio.py
camera-roll-sounds-ios/: .boilersync  Project.swift  README.md
camera-roll-sounds-ios/CameraRollSounds/: APIClient.swift  AudioPlayer.swift  CameraRollSoundsApp.swift  Constants.swift  Constants.swift.starter  HomeView.swift  HomeView.swift.starter
camera-roll-sounds-ios/CameraRollSoundsTests/: CameraRollSoundsTests.swift
camera-roll-sounds-ios/CameraRollSoundsUITests/: CameraRollSoundsUITests.swift  CameraRollSoundsUITestsLaunchTests.swift
camera-roll-sounds-ios/Tuist/: Package.resolved  Package.swift
camera-roll-sounds-react/: .boilersync  index.html  package-lock.json  vite.config.ts
scripts/: setup.sh
(+2 files in other folders)
