[project]
name = "camera-roll-sounds-api"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "audioop-lts>=0.2.1",
    "elevenlabs>=1.0.0",
    "pydub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."web.app_packages"]
camera_roll_sounds_api = "camera_roll_sounds_api.package_apps:get_apps"
